--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-axios-middleware": "^4.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "remote-redux-devtools": "^0.5.13"
   }
 }
