--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint ./; exit=0",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "flow": "flow",
+    "flow-stop": "flow stop"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -21,14 +23,17 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-expo": "^5.0.0",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.87.0",
     "remote-redux-devtools": "^0.5.13"
   }
 }
