--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "flow": "flow",
+    "flow": "flow; exit=0",
     "flow-stop": "flow stop"
   },
   "dependencies": {
