--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "concurrently -r 'tsc -w' 'expo start'",
     "lint": "eslint ./; exit=0",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "concurrently": "^4.1.0",
     "expo": "^31.0.2",
     "native-base": "^2.8.1",
     "react": "16.5.0",
@@ -21,6 +22,9 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.7.8",
+    "@types/react-native": "^0.57.15",
+    "@types/react-redux": "^6.0.10",
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-expo": "^5.0.0",
@@ -29,6 +33,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "remote-redux-devtools": "^0.5.13"
+    "react-native-typescript-transformer": "^1.2.10",
+    "remote-redux-devtools": "^0.5.13",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6",
+    "typings": "^2.1.1"
   }
 }
