--- a/.flowconfig
+++ b/.flowconfig
@@ -2,3 +2,9 @@
   module.name_mapper='components' ->'<PROJECT_ROOT>/src/components'
   module.name_mapper='features' ->'<PROJECT_ROOT>/src/features'
   module.name_mapper='shared' ->'<PROJECT_ROOT>/src/shared'
+
+[ignore]
+  .*/node_modules/react-native/.*
+
+[libs]
+  ./libs
