--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "makerBotMobile",
+    "name": "test",
     "description": "This project is really great.",
-    "slug": "makerBotMobile",
+    "slug": "test",
     "privacy": "public",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
@@ -22,6 +22,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "test.android.package"
     }
   }
 }
