--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "expo start",
+    "a-build": "expo build:android",
     "lint": "eslint ./; exit=0",
     "android": "expo start --android",
     "ios": "expo start --ios",
