--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "jest": {
     "preset": "react-native",
     "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
       "\\.(js|jsx)$": "babel-jest"
     }
   },
