--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-timeline-listview": "^0.2.3",
     "react-navigation": "^3.0.1",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
