--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "decko": "^1.2.0",
     "expo": "^31.0.6",
+    "moment": "^2.22.2",
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-swiper": "git+https://github.com/pnaydanov/react-native-swiper.git",
     "react-native-timeline-listview": "^0.2.3",
     "react-navigation": "^3.0.7",
     "react-redux": "^5.1.1",
