--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-calendar-strip": "^1.3.6",
     "react-native-swiper": "git+https://github.com/pnaydanov/react-native-swiper.git",
     "react-native-timeline-listview": "^0.2.3",
     "react-navigation": "^3.0.7",
