--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-navigation": "^3.0.7",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-sliding-up-panel": "^1.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
